--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
     </ItemGroup>
